Removed unnecessary methods