@@ -1,63 +1,48 @@
 package com.glynch.ollama.chat;
 
+import java.util.Collections;
 import java.util.List;
 
 public record Message(Role role, String content, List<String> images) {
 
-    public static Message create(String content) {
-        return new Message(Role.USER, content, List.of());
-    }
-
-    public static Message create(Role role, String content) {
-        return new Message(role, content, List.of());
-    }
-
-    public static Message create(Role role, String content, List<String> images) {
-        return new Message(role, content, images);
-    }
-
-    public static Message create(Role role, String content, String... images) {
-        return new Message(role, content, List.of(images));
+    public static Message user(String content, List<String> images) {
+        return new Message(Role.USER, content, Collections.unmodifiableList(images));
     }
 
     public static Message user(String content) {
-        return create(Role.USER, content);
-    }
-
-    public static Message user(String content, List<String> images) {
-        return create(Role.USER, content, images);
+        return user(content, List.of());
     }
 
     public static Message user(String content, String... images) {
-        return create(Role.USER, content, images);
-    }
-
-    public static Message system(String content) {
-        return create(Role.SYSTEM, content);
+        return user(content, List.of(images));
     }
 
     public static Message system(String content, List<String> images) {
-        return create(Role.USER, content, images);
+        return new Message(Role.USER, content, Collections.unmodifiableList(images));
+    }
+
+    public static Message system(String content) {
+        return system(content, List.of());
     }
 
     public static Message system(String content, String... images) {
-        return create(Role.USER, content, images);
-    }
-
-    public static Message assistant(String content) {
-        return create(Role.ASSISTANT, content);
+        return system(content, List.of(images));
     }
 
     public static Message assistant(String content, List<String> images) {
-        return create(Role.ASSISTANT, content, images);
+        return new Message(Role.ASSISTANT, content, images);
+    }
+
+    public static Message assistant(String content) {
+        return assistant(content, List.of());
     }
 
     public static Message assistant(String content, String... images) {
-        return create(Role.ASSISTANT, content, images);
+        return assistant(content, List.of(images));
     }
 
     public static Message message(Message message) {
-        return create(message.role, message.content(), message.images());
+        return new Message(message.role, message.content(), message.images());
     }
 
 }
